# ton-address-miner

./: CMakeLists.txt  README.md
scripts/: prepare_dict.py
src/: bip39.c  bip39.h  cell.c  cell.h  contract.c  contract.h  hmac_sha512.cu  hmac_sha512.cuh  main.c  main.cu  mnemonic.c  mnemonic.h  pbkdf2.cu  pbkdf2.cuh  sha256.cu  sha256.cuh  sha512.cu  sha512.cuh
